k8s-labs/webapp-antiaffinity/webapp-antiaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-antiaffinity
  namespace: webapp-antiaffinity
  labels:
    app: webapp-antiaffinity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-antiaffinity
  template:
    metadata:
      labels:
        app: webapp-antiaffinity
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - webapp-antiaffinity
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: webapp-antiaffinity
        image: quay.io/rhte_2019/webapp:v1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80 
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
    name: webapp-antiaffinity-service
    namespace: webapp-antiaffinity
spec:
    selector:
      app: webapp-antiaffinity
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp-antiaffinity
  labels:
    app: webapp-antiaffinity
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: foo-antiaffinity.bar
    http:
      paths:
      - path: /webapp
        pathType: "Prefix"
        backend:
          service:
            name: webapp-antiaffinity-service
            port:
              number: 80
